methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:1: error: expected start of definition
override def run() {
         ^PictureMono2:10: error: expected class or object definition
def DessinV(){
^PictureMono2:21: error: expected class or object definition
def droitesV(){
^